--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,14 @@
 		"browser": true,
 		"es2021": true
 	},
-	"extends": ["eslint:recommended", "plugin:react/recommended", "plugin:react-hooks/recommended", "prettier"],
-	"overrides": [
+	"extends": [
+		"eslint:recommended",
+		"plugin:react/recommended",
+		"plugin:react-hooks/recommended",
+		"plugin:react/jsx-runtime",
+		"prettier"
 	],
+	"overrides": [],
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module"
@@ -17,7 +22,7 @@
 		"quotes": ["error", "single"],
 		"semi": ["error", "always"],
 		"react-hooks/rules-of-hooks": "error",
-		"react-hooks/exhaustive-deps": "warn"
+		"react-hooks/exhaustive-deps": "warn",
+		"no-multi-spaces": ["error"]
 	}
-    
 }
