changed some eslint config and scripts

--- a/package.json
+++ b/package.json
@@ -1,65 +1,72 @@
 {
-  "name": "movie-app-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@redux-devtools/extension": "^3.2.5",
-    "@reduxjs/toolkit": "^1.9.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "configure-husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\"",
-    "prepare": "husky install"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.3"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx}": [
-      "npx prettier --write",
-      "npx eslint --fix"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  }
+	"name": "movie-app-frontend",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@redux-devtools/extension": "^3.2.5",
+		"@reduxjs/toolkit": "^1.9.2",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.5",
+		"react-router-dom": "^6.8.0",
+		"react-scripts": "5.0.1",
+		"styled-components": "^5.3.6",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"lint": "eslint --ignore-path .gitignore .",
+		"lint:css": "stylelint './src/**/*.js'",
+		"prettier": "prettier --ignore-path .gitignore \"**/*.+(js|jsx|json|css)\"",
+		"format": "npm run prettier -- --write"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"eslint": "^8.33.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"husky": "^8.0.3",
+		"lint-staged": "^13.1.0",
+		"prettier": "^2.8.4"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "npm run lint:css && lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.+(js|jsx)": [
+			"eslint --fix",
+			"prettier --write",
+			"git add"
+		],
+		"*.+(json|css|md)": [
+			"prettier --write"
+		]
+	}
 }
