--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,12 +15,13 @@
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
-	"plugins": ["react", "react-hooks","prettier"],
+	"plugins": ["react", "react-hooks", "prettier"],
 	"rules": {
 		"indent": ["error", "tab"],
 		// "linebreak-style": ["error", "windows"],
+		"no-unused-vars": "warn",
+    	"no-console": "warn",
 		"linebreak-style": ["error", "unix"],
-		"quotes": ["error", "single"],
 		"semi": ["error", "always"],
 		"react-hooks/rules-of-hooks": "error",
 		"react-hooks/exhaustive-deps": "warn",
