--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
 		// "linebreak-style": ["error", "windows"],
 		"linebreak-style": ["error", "unix"],
 		"quotes": ["error", "single"],
+		"react/prop-types": 0,
 		"semi": ["error", "always"],
 		"react-hooks/rules-of-hooks": "error",
 		"react-hooks/exhaustive-deps": "warn",
