working on feat

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,9 +20,10 @@
 		"indent": ["error", "tab"],
 		// "linebreak-style": ["error", "windows"],
 		"no-unused-vars": "warn",
-    	"no-console": "warn",
+		"no-console": "warn",
 		"linebreak-style": ["error", "unix"],
 		"quotes": ["error", "single"],
+		"prettier/prettier": ["error", { "singleQuote": true }],
 		"react/prop-types": 0,
 		"semi": ["error", "always"],
 		"react-hooks/rules-of-hooks": "error",
