--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.3.0",
+		"@fortawesome/free-solid-svg-icons": "^6.3.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@redux-devtools/extension": "^3.2.5",
 		"@reduxjs/toolkit": "^1.9.2",
 		"@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +14,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hot-toast": "^2.4.0",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.8.0",
 		"react-scripts": "5.0.1",
